--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,15 @@
   body {
     font-family: sans-serif;
   }
+
   label {
     display: block;
     margin-bottom: .2em;
+  }
+
+  form {
+      margin: 10;
+      padding: 10;
   }
   
   
