--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@
       margin: 10;
       padding: 10;
   }
+
+  form p {
+    margin: 10;
+    padding: 10;
+  }
   
   
   /******************************************
