--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,13 @@
   }
 
   form {
-      margin: 10;
-      padding: 10;
+      margin: 10px;
+      padding: 10px;
   }
 
   p {
-    margin: 25;
-    padding: 25;
+    margin: 25px;
+    padding: 25px;
   }
   
   
