--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,9 @@
       padding: 10px;
   }
 
-  p {
-    margin: 25px;
-    padding: 25px;
+  form p {
+    /* margin: 25px;
+    padding: 25px; */
   }
   
   
